--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
@@ -4,6 +4,11 @@
 
 /* universal */
 
+@media (max-width:767px) {}
+@media(min-width:768px){}
+@media(min-width:992px){}
+@media(min-width:1200px){}
+
 html {
   overflow-y: scroll;
 }
