--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
@@ -4,11 +4,6 @@
 
 /* universal */
 
-@media (max-width:767px) {}
-@media(min-width:768px){}
-@media(min-width:992px){}
-@media(min-width:1200px){}
-
 html {
   overflow-y: scroll;
 }
@@ -89,3 +84,20 @@ footer .footer-nav {
   margin-right: 25px;
   list-style: none;
 }
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+/*@media (min-width: @screen-xs-max) { ... }*/
+/* @media (max-width:767px){} */
+
+/* Small devices (tablets, 768px and up) */
+/*@media (min-width: @screen-sm-min) { ... }*/
+@media(min-width:768px){}
+
+/* Medium devices (desktops, 992px and up) */
+/*@media (min-width: @screen-md-min) { ... }*/
+@media(min-width:992px){}
+
+/* Large devices (large desktops, 1200px and up) */
+/*@media (min-width: @screen-lg-min) { ... }*/
+@media(min-width:1200px){}
